tests/typechecking/correct/emptylist.spl
Int main()
{
	print(([],(1:[])) : (('a':[]),[]) : []);
}
