tests/typechecking/fail/unifyerror.spl
Int main()
{
	Bool a = [] == (1:[],[]):('a':[],1:[]):[];
	return 1;
}
